--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "version": 2,
     "builds": [
-      { "src": "index.html", "use": "@vercel/static" },
+      { "src": "*.html", "use": "@vercel/static" },
+      { "src": "*.js", "use": "@vercel/static" },
       { "src": "api/convert.js", "use": "@vercel/node" }
     ],
     "routes": [
