--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "name": "linktunes",
     "version": "1.0.0",
-    "dependencies": { "axios": "^1.6.7" }
+    "dependencies": {
+      "axios": "^1.6.7",
+      "micro": "^10.0.1"
+    }
   }
