--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "linktunes",
     "version": "1.0.0",
     "dependencies": {
-      "axios": "^1.6.7",
-      "micro": "^10.0.1"
+      "axios": "^1.6.7"
     }
   }
